--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-halo2-base = { path = "../halo2-lib/halo2-base" }
+# halo2-base = { path = "../halo2-lib/halo2-base" }
+halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", default-features = false }
 rand_core = "0.6.4"
 
 [features]
 default = [
     "halo2-base/halo2-pse",
+    "halo2-base/test-utils"
     ]
 
-[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
-halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-halo2-lib-0.4.0" }
+# [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
+# halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-halo2-lib-0.4.0" }
